--- a/web1/src/app/company-payment/payment/payment.component.html
+++ b/web1/src/app/company-payment/payment/payment.component.html
@@ -70,6 +70,16 @@
                                         </div>
                                     </mat-form-field>
                                 </div>
+                                <div *ngIf="this.creditList != ''" class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Vendore Credit</mat-label>
+                                        <mat-select name="vendorCredit" [(ngModel)]="vendorCredit" (selectionChange)="vendorCreditValue()" required
+                                            #vendorCreditcontrol1>
+                                            <mat-option [value]="c" *ngFor="let c of creditList"> {{c.CreditNumber}}  <b style="color: red;float: right;">{{c.Amount}} </b> 
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
                                 <div class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Pay Amount</mat-label>
