--- a/server/assest/invoice.css
+++ b/server/assest/invoice.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    margin: 5px !important; font-family: 'Roboto', sans-serif;
+    margin: 5px !important; font-family: 'Roboto', sans-serif; display: flex;
 }
 /* header css  start*/
 /* company logo */
