--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -4,6 +4,10 @@
     * {
         border-bottom: 1xp solid;
     }
+
+    html {
+        zoom: 1;
+    }
 </style>
 
 <body>
@@ -49,7 +53,7 @@
             <!-- header section  end -->
 
             <!-- Customer Details start  -->
-            <section>
+            <section style="width: 100%;">
                 <div class="CustomerRow">
                     <div class="col1">
                         <ul class="ul1" <% %> style="font-size:<%= data.CustomerFont %> ; line-height:<%=
