--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -750,7 +750,7 @@
                             #GSTAmountcontrol [autocomplete]="false" disabled>
                     </mat-form-field>
                 </div>
-                <span *ngIf="this.loginShop.GSTnumber === 'true'" >
+                
                 <div class="col-xl-1 col-lg-1 col-md-2 col-4  mb-0" *ngFor="let gst of gst_detail">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>{{gst.GSTType}}</mat-label>
@@ -760,7 +760,7 @@
                     </mat-error>
                 </mat-form-field>
             </div>
-        </span>
+        
                 <!-- <div class="col-xl-1 col-lg-1 col-md-1 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label class="cus-label">CGST</mat-label>
@@ -773,16 +773,16 @@
                         <input class="cust-input" type="number" matInput name="SGST" [(ngModel)]="sgst" disabled>
                     </mat-form-field>
                 </div> -->
-                <!-- <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Additional Discount%</mat-label>
-                        <input matInput name="AddlDiscountPercentage" (blur)="AddDiscalculate('AddlDiscountPercentage', 'discount')" type="number" [(ngModel)]="BillMaster.AddlDiscountPercentage" #AddlDiscountPercentagecontrol
+                        <input matInput name="AddlDiscountPercentage" (blur)="AddDiscalculate('AddlDiscountPercentage', 'discount')" type="number" min="0" [(ngModel)]="BillMaster.AddlDiscountPercentage" #AddlDiscountPercentagecontrol
                             [autocomplete]="false">
                         <mat-error>
                             Additional Discount is required
                         </mat-error>
                     </mat-form-field>
-                </div> -->
+                </div>
                 <div class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Additional Discount</mat-label>
