--- a/web1/src/app/admin/company-setting/company-setting.component.html
+++ b/web1/src/app/admin/company-setting/company-setting.component.html
@@ -658,32 +658,32 @@
                                                     <div class="col-12" style="font-size: {{this.bill.CustomerFont}}px; line-height:  {{this.bill.CustomerLineSpace}}px;">
                                                     <div style="width:100vh; padding: 0px 10px; ">
                                                         <div style="width:55vh;float: left; ">
-                                                           <div style="width:20%;float: left; ">
-                                                                <p>Bill of Supply</p>
-                                                                <p>Cust_ID</p>
-                                                                <p>Name</p>
-                                                                <p>MobileNo1</p>
-                                                           </div>
-                                                           <div style="width:75%;float: right;">
-                                                                 <p>xxxxxxxxxx</p>
-                                                                 <p>xx</p>
-                                                                 <p>xxxxx xxxxx</p>
-                                                                 <p>xxxxxxxx</p>
-                                                           </div>
+                                                           <ul style="width:20%;float: left;padding: 0 ; list-style: none; ">
+                                                                <li>Bill of Supply</li>
+                                                                <li>Cust_ID</li>
+                                                                <li>Name</li>
+                                                                <li>MobileNo1</li>
+                                                           </ul>
+                                                           <ul style="width:75%;float: right;padding: 0 ; list-style: none;">
+                                                                 <li>xxxxxxxxxx</li>
+                                                                 <li>xx</li>
+                                                                 <li>xxxxx xxxxx</li>
+                                                                 <li>xxxxxxxx</li>
+                                                           </ul>
                                                         </div>
                                                         <div style="width:40vh;float: right;">
-                                                            <div style="width:25%;float: left;">
-                                                                <p>Date</p>
-                                                                <p>Del. Date</p>
-                                                                <p>Rx BY</p>
-                                                                <p>Sale Person</p>
-                                                           </div>
-                                                           <div style="width:70%;float: right;">
-                                                            <p>xx xx xxxx</p>
-                                                            <p>xx xx xxxx</p>
-                                                            <p>xxxxx xxxxx</p>
-                                                            <p>xxxx xxxx</p>
-                                                           </div>
+                                                            <ul style="width:25%;float: left;padding: 0 ; list-style: none;">
+                                                                <li>Date</li>
+                                                                <li>Del. Date</li>
+                                                                <li>Rx BY</li>
+                                                                <li>Sale lierson</li>
+                                                           </ul>
+                                                           <ul style="width:70%;float: right;padding: 0 ; list-style: none;">
+                                                            <li>xx xx xxxx</li>
+                                                            <li>xx xx xxxx</li>
+                                                            <li>xxxxx xxxxx</li>
+                                                            <li>xxxx xxxx</li>
+                                                           </ul>
                                                         </div>
                                                     </div>
                                                 </div>
