--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -92,7 +92,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label> Name</mat-label>
                                                 <input matInput min="3" [(ngModel)]="data.Name" name="Name"
-                                                 required (blur)="close()"
+                                                 required 
                                                 #UserNamecontrol >
                                                 <mat-error>
                                                     Name is required
