--- a/web1/src/app/uploader/purchase-bluk/purchase-bluk.component.css
+++ b/web1/src/app/uploader/purchase-bluk/purchase-bluk.component.css
@@ -1,11 +1,11 @@
-.detail_icons i{
-    background: #38a042e8;
+.detail_icons{
+    background-color: #38a042e8;
     color: #fff;
-    padding: 4px !important;
+    padding: 5px !important;
     border-radius: 24px !important;
     font-size: 22px !important;
     height: 30px !important;
-    width: 30px !important;
+    width: 32px !important;
     transition: .5s;
     cursor: pointer;
     box-shadow: 2px 2px 6px #9c9795fa;
@@ -32,4 +32,22 @@
     border: none;
     padding: 0;
     margin: 0;
+}
+
+button:disabled .detail_icons {
+  background-color: #bdbdbd;
+  color: #878787;
+  padding: 5px !important;
+  border-radius: 24px !important;
+  font-size: 22px !important;
+  height: 30px !important;
+  width: 32px !important;
+  transition: .5s;
+  cursor: pointer;
+  box-shadow: 2px 2px 6px #9c9795fa;
+}
+
+button:disabled .delete_icon {
+  background-color: #bdbdbd;
+  color: #878787;
 }
