--- a/web1/src/app/uploader/purchase-bluk/purchase-bluk.component.html
+++ b/web1/src/app/uploader/purchase-bluk/purchase-bluk.component.html
@@ -68,12 +68,12 @@
                                             <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                 style="white-space: nowrap;">
                                                 <td class="text-left">
-                                                    <button class="detail_icons bg-btn" [disabled]="data.Process == 1"
+                                                    <button class=" bg-btn " [disabled]="data.Process == 1"
                                                         (click)="openModal(content,data)">
-                                                        <i class="fas fa-info-circle" data-mdb-toggle="modal"
+                                                        <i class="fas fa-info-circle detail_icons" data-mdb-toggle="modal"
                                                             data-mdb-target="#exampleModal" style="pointer-events: none;"> </i>
                                                     </button>
-                                                    <button  class=" bg-btn">
+                                                    <button  class=" bg-btn" [disabled]="data.Process == 1">
                                                         <mat-icon class="delete_icon ms-2"  (click)="deleteItem(data,i)">delete_forever</mat-icon>
                                                     </button>
                                                 </td>
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" (click)="processFile()" mat-raised-button color="primary">Process File</button>
+                <button type="button" [disabled]="!f.valid" (click)="processFile()" mat-raised-button color="primary">Process File</button>
             </div>
         </form>
     </div>
