--- a/web1/src/app/shared/dashcard/dashcard.component.css
+++ b/web1/src/app/shared/dashcard/dashcard.component.css
@@ -6,7 +6,9 @@
     animation-name: example;
     animation-duration: 9s;
     background: linear-gradient(90deg, rgba(255, 255, 255, 0.233) 0%, rgb(255, 255, 255) 100%);
+    border-bottom: dashed;
   }
+
   
   .content {
     background-size: 100%;
