--- a/web1/src/app/shared/dashcard/dashcard.component.html
+++ b/web1/src/app/shared/dashcard/dashcard.component.html
@@ -1,4 +1,4 @@
-<a href="javascript:void(0)" routerLink={{routersLinks}} class="hoc">
+<!-- <a href="javascript:void(0)" routerLink={{routersLinks}} class="hoc">
     <div class="card ">
         <div class="p-4">
             <img src={{icon}} class="float-left" alt="" width="60" height="60">
@@ -10,6 +10,22 @@
             <a href="javascript:void(0)" routerLink={{routersLinks}}>
                 <i class=" fa fa-arrow-right"></i>
             </a>
+        </div>
+    </div>
+</a> -->
+
+<a href="javascript:void(0)" routerLink={{routersLinks}} class="hoc">
+    <div class="card ">
+        <div class="row" style="padding: 10px;">
+            <div class="col-9 pt-3 p-0">
+                    <span class="ml-auto name" style="font-size:25px;font-weight:600;margin-top:5%;">
+                        {{title}}  
+                    </span>
+            </div>
+            <div class="col-3 p-0" style="padding-left: 25px !important;">
+                <img src={{icon}} class="float-left" alt="" width="60" height="60" style="padding: 10px;
+                background: #1e2672; border-radius: 42px; border-radius: 42px; border: 4px solid #ff5100;">
+            </div>
         </div>
     </div>
 </a>
