--- a/web1/src/app/inventory/purchase/purchase.component.html
+++ b/web1/src/app/inventory/purchase/purchase.component.html
@@ -515,8 +515,7 @@
                                                     </td>
                                                     <td class="text-center"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
-                                                        <span *ngIf="data.BaseBarCode !== ''">{{data.BaseBarCode *
-                                                            1000}}</span>
+                                                        <span *ngIf="data.BaseBarCode !== ''">{{data.BaseBarCode}}</span>
                                                     </td>
                                                     <td class="text-center"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
