--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -808,8 +808,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-12">
-                    <button type="button" mat-raised-button color="primary" (click)="onSubmit(content1)" [disabled]="(billItemList?.length === 0 && serviceLists?.length === 0) || BillMaster.ID !== null" >Save</button>
-                    <button type="button" class="me-3 ms-3" mat-raised-button color="primary"
+                    <button *ngIf="this.id2 == 0" type="button" class="me-3" mat-raised-button color="primary" (click)="onSubmit(content1)" [disabled]="(billItemList?.length === 0 && serviceLists?.length === 0) || BillMaster.ID !== null" >Save</button>
+                    <button *ngIf="this.id2 != 0" type="button" class="me-3" mat-raised-button color="primary"
                      [disabled]="BillMaster.ID === null" (click)="update()">Update</button>
                      <button type="button" class=" me-3" mat-raised-button color="primary"
                      [disabled]="BillMaster.ID === null" (click)="openModal1(content1)">Payment</button>
