--- a/web1/src/app/product/add-manage/add-manage.component.html
+++ b/web1/src/app/product/add-manage/add-manage.component.html
@@ -265,7 +265,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>Customer Price</mat-label>
-                                        <input matInput name="Price"  type="number" min="0" [(ngModel)]="Service.Price" (blur)="calculateSevice('SubTotal', 'subTotal')"  required #Pricecontrol disabled>
+                                        <input matInput name="Price"  type="number" min="0" [(ngModel)]="Service.Price" (blur)="calculateSevice('SubTotal', 'subTotal')"  required #Pricecontrol  [disabled]="this.setValueServiceDisbled">
                                         <mat-error>
                                             Invalid Value
                                             </mat-error>
@@ -274,7 +274,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>SubTotal</mat-label>
-                                        <input matInput name="Price"  type="number" min="0" [(ngModel)]="Service.SubTotal" required #SubTotalcontrol [disabled]="this.setValueServiceDisbled">
+                                        <input matInput name="SubTotal"  type="number" min="0" [(ngModel)]="Service.SubTotal" required #SubTotalcontrol disabled>
                                         <mat-error>
                                             Invalid Value
                                             </mat-error>
@@ -292,7 +292,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0" >
                                         <mat-label>GSTAmount</mat-label>
-                                        <input matInput name="GSTAmount" type="number" min="0" [(ngModel)]="Service.GSTAmount" (blur)="calculateSevice('GSTAmount', 'chgst1')" required #GSTAmountcontrol [disabled]="this.setValueServiceDisbled">
+                                        <input matInput name="GSTAmount" type="number" min="0" [(ngModel)]="Service.GSTAmount"  required #GSTAmountcontrol disabled>
                                         <mat-error>
                                             Invalid Value
                                             </mat-error>
@@ -331,7 +331,7 @@
                                    </button>
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0" *ngIf="showAddService">
-                                    <button type="submit" [disabled]="!f2.valid " autofocus mat-raised-button color="primary" (click)="showAddService = !showAddService;  servicesave();">
+                                    <button type="submit" [disabled]="!f2.valid || Service.TotalAmount == 0" autofocus mat-raised-button color="primary" (click)="showAddService = !showAddService;  servicesave();">
                                         save
                                     </button>
                                 </div>
