--- a/web1/src/app/report/purchase-report/purchase-report.component.html
+++ b/web1/src/app/report/purchase-report/purchase-report.component.html
@@ -353,9 +353,9 @@
                             <td></td>
                             <td></td>
                             <td>{{this.DetailtotalQty}}</td>
-                            <td></td>
-                            <td>{{this.DetailtotalDiscount}}</td>
                             <td>{{this.DetailtotalUnitPrice}}</td>
+                            <td>{{this.DetailtotalDiscount}}</td>
+                            <td>{{this.DetailtotalSubTotal}}</td>
                             <td></td>
                             <td></td>
                             <td (click)="openModal(content)">
@@ -363,8 +363,8 @@
                             <td>{{this.DetailtotalAmount}}</td>
                             <td></td>
                             <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>{{this.DetailtotalRetailPrice}}</td>
+                            <td>{{this.DetailtotalWholeSalePrice}}</td>
                             <td></td>
                           </tr>
                         </thead>
