--- a/web1/src/app/sale/bill/bill.component.css
+++ b/web1/src/app/sale/bill/bill.component.css
@@ -104,6 +104,10 @@ input::-webkit-inner-spin-button {
     box-shadow: 2px 2px 6px #9c9795fa;
 }
 
+button:disabled .deletes_icon{
+    background-color: #bdbdbd;
+    color: #878787;
+}
 
 .inputWidth{
     width: 70px;
