--- a/web1/src/app/po/purchase-convert/purchase-convert.component.html
+++ b/web1/src/app/po/purchase-convert/purchase-convert.component.html
@@ -58,9 +58,8 @@
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Invoice Date</mat-label>
-                                        <input matInput name="InvoiceDate" type="date"
-                                            [(ngModel)]="PurchaseMaster.PurchaseDate"
-                                            [ngModelOptions]="{standalone: true}" required>
+                                        <input matInput name="PurchaseDate" type="date"
+                                            [(ngModel)]="PurchaseMaster.PurchaseDate" required>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
