--- a/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
+++ b/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
@@ -172,8 +172,8 @@
                         <form>
                             <div class="row">
                                 <div class="col-sm-12" style="overflow: auto; height: 450px;">
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-hover table-sm table-bordered"
+                              
+                                        <table class="table table-responsive table-striped table-hover table-sm table-bordered"
                                             style="border: 2px solid #fff !important;">
                                             <thead>
                                                 <tr style="white-space: nowrap;" (click)="showInput()"
@@ -245,7 +245,7 @@
                                                 </tr>
                                             </tbody>
                                         </table>
-                                    </div>
+                                    
                                 </div>
                             </div>
                         </form>
