--- a/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
+++ b/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
@@ -170,16 +170,12 @@
                             <!-- form end -->
                         </div>
                         <div class="body mt-md-0 mt-5 p-2">
-                            <div class="row">
-                                <div class="col-sm-12" style="overflow: auto; height: 460px;">
-                                        <table class="table table-striped table-hover table-sm table-bordered"
+                            <div class="row ">
+                                <div class="col-12 " style="overflow: auto; height: 460px;">
+                                        <table class="table  table-striped table-hover table-sm table-bordered"
                                             style="border: 2px solid #fff !important;">
                                             <thead>
                                                 <tr class="text-center">
-                                                    <!-- <th>   
-                                                        <mat-checkbox color="primary" (click)="selectAllPreorder('all')">
-                                                        </mat-checkbox>
-                                                   </th> -->
                                                     <th>Action</th>
                                                     <th>S.No</th>
                                                     <th>ProductName</th>
@@ -200,9 +196,6 @@
                                             <tbody>
                                                 <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                     style="white-space: nowrap;">
-                                                    <!-- <td>
-                                                        <mat-checkbox color="primary" [(ngModel)]="data.Checked" name="{{i + 'name'}}" [checked]="data.Checked" [ngModelOptions]="{standalone: true}" (click)="singleSelectPreOrder(i)" ></mat-checkbox>
-                                                    </td> -->
                                                     <td style="width: 5%;">
                                                         <button *ngIf="!data.UpdateProduct" class="bg-btn"
                                                             (click)="showInput(data)">
@@ -260,7 +253,7 @@
                                                             ({{data.AreaName}})</span>
                                                     </td>
                                                     <td>{{data.CreatedPerson}}</td>
-                                                    <td>{{data.CreatedOn}}</td>
+                                                    <td>{{dateFormat(data.CreatedOn)}}</td>
                                                 </tr>
                                             </tbody>
                                         </table>
