--- a/web1/src/app/report/product-return/product-return.component.html
+++ b/web1/src/app/report/product-return/product-return.component.html
@@ -65,7 +65,7 @@
                             Reset
                           </button>
                           <button  mat-raised-button color="primary"  
-                          printTitle="Purchase Retrun Report"  printSectionId="Purchase Retrun Report {{this.selectsShop}}"  ngxPrint [useExistingCss]="true">
+                          printTitle="Purchase Retrun Report  {{this.selectsShop}}"  printSectionId="PurchaseRetrunPDF"  ngxPrint [useExistingCss]="true">
                             <i  class="far fa-file-pdf "
                             style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
                         </button>
@@ -254,15 +254,18 @@
                           <button type="button" class="me-1 ms-1" mat-raised-button color="warn" (click)="RetureDetailsFromReset()">
                              Reset
                           </button>
-                          <button mat-raised-button color="primary"  printTitle="Product return (ProductType) Report {{this.selectsShop}}"  printSectionId="ProductTypesPDF"  ngxPrint styleSheetFile="../../../assets/pdf.css">
+                         
+
+                          <button mat-raised-button  color="primary" printSectionId="ProductTypesPDF" printTitle="Product return (ProductType) Report {{this.selectsShop}}"  ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'zoom': '70%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
                             <i  class="far fa-file-pdf "
                             style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
                         </button>
+
                         </div>
                       </div>
                     </form>
                     <!-- Purchase Detailed list -->
-                    <div class="body p-2">
+                    <div class="body p-2 Purchase_Detailed">
                       <div id="ProductTypesPDF" class="col-sm-12" style="overflow: auto; height: 450px;">
                         <table class="table table-striped table-hover table-sm table-bordered"
                           style="border: 2px solid #fff !important;" id="purchaseDetailExcel">
@@ -293,7 +296,7 @@
                               <th>BarCode</th>
                               <th>Current Shop</th>
                             </tr>
-                            <tr class="totolRow" *ngIf="this.DetailtotalQty != null && this.DetailtotalQty != '' ">
+                            <tr class="totolRow" *ngIf="this.DetailtotalQty != null && this.DetailtotalQty != 0 ">
                               <td>
                                 <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                   (click)="exportAsXLSXDetail()">
