--- a/web1/src/app/sale/commission-list/commission-list.component.html
+++ b/web1/src/app/sale/commission-list/commission-list.component.html
@@ -90,7 +90,7 @@
                                             <td>{{v.UserType}} {{v.FitterName}}</td>
                                             <td>{{v.UserName}}</td>
                                             <td>{{v.InvoiceNo}}</td>
-                                            <td>{{v.PurchaseDate}}</td>
+                                            <td>{{dateFormat(v.PurchaseDate)}}</td>
                                             <td>{{v.PaymentStatus}}</td>
                                             <td>{{v.TotalAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                         </tr>
