--- a/web1/src/app/admin/company-login-history/company-login-history.component.html
+++ b/web1/src/app/admin/company-login-history/company-login-history.component.html
@@ -58,7 +58,7 @@
                                             <td class="text-left">{{data.UserGroup}}</td>
                                             <td class="text-left">{{data.CompanyName}}</td>
                                             <td class="text-left">{{data.IpAddress}}</td>
-                                            <td class="text-left">{{data.LoginTime}}</td>
+                                            <td class="text-left">{{dateFormat(data.LoginTime)}}</td>
                                             <td class="text-left">{{data.Comment }}</td>
                                         </tr>
                                     </tbody>
