--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -773,7 +773,7 @@
                                 </div>
                             </mat-tab>
                             <!-- get Product Cancel -->
-                            <mat-tab label="Sale (Cancel Product)">
+                            <mat-tab label="Product Cancel">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getProductCancel()">
                                         <div class="row">
@@ -1157,7 +1157,7 @@
                                 </div>
                             </mat-tab>
                             <!-- pending product  -->
-                            <mat-tab label="Sale (Pending Product)">
+                            <mat-tab label="Product Pending">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getProductPending()">
                                         <div class="row">
